<resources>
    <string name="app_name">Learning Platform</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_mail_text">E-mail</string>
    <string name="login_password_text">Password</string>
    <string name="register_name_text">Name</string>
    <string name="register_surname_text">Surname</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_button">REGISTER</string>
    <string name="select_language_text">Please, select a language...</string>
    <string name="select_exercise_type_text">Please, choose a category...</string>
    <string name="listening">Listening</string>
    <string name="reading">Reading</string>
    <string name="writing">Writing</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="chats">Chats</string>
    <string name="no_filters_selected">No filters selected, press the filter button above (<annotation src="@drawable/pie_chart">&#2228;</annotation>)\n<i><annotation foregroundColor="@color/app_color_light">or swipe from the&#160;right</annotation></i></string>
</resources>
